Deploy troubleshooting-diary